[package]
name = "fsm-acceptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.9.0"
serde = { version = "1.0", features = ["derive"], optional = true }
graphviz-rust = "0.6.2"

[features]
default = ["serde"]

[dev-dependencies]
color-eyre = "0.6"
serde_json = "1.0"
